@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="plugin.video.nfl-teams" version="1.3.3" name="NFL Teams" provider-name="Tenzer">
+<addon id="plugin.video.nfl-teams" version="1.3.5" name="NFL Teams" provider-name="Tenzer">
     <requires>
-        <import addon="xbmc.python" version="2.1.0"/>
+        <import addon="xbmc.python" version="2.14.0"/>
         <import addon="xbmc.addon" version="12.0.0"/>
         <import addon="script.module.requests" version="2.3.0"/>
         <import addon="script.common.plugin.cache" version="2.5.6"/>
