@@ -34,20 +34,17 @@ class NFLCS(object):
         else:
             self.list_categories()
 
-    def _get_cached_response(self, url, parameters={}):
-        cache_key = sha1(url + repr(parameters)).hexdigest()
+    def do_request(self, url, params):
+        if not params:
+            params = {}
+        return requests.get(url, params=params).json()
 
-        cache_response = self._cache.get(cache_key)
-        if cache_response:
-            return json.loads(cache_response)
-        else:
-            response = requests.get(url, params=parameters)
-            self._cache.set(cache_key, response.text.encode("utf-8"))
-            return response.json()
+    def request(self, url, params=None):
+        return self._cache.cacheFunction(self.do_request, url, params)
 
     def play_video(self):
         parameters = {"id": self._parameters["id"]}
-        data = self._get_cached_response("{0}audio-video-content.htm".format(self._cdaweb_url), parameters)
+        data = self.request("{0}audio-video-content.htm".format(self._cdaweb_url), parameters)
 
         title = data["headline"]
         thumbnail = data["imagePaths"]["xl"]
@@ -83,7 +80,7 @@ class NFLCS(object):
         else:
             parameters = {"type": "VIDEO", "channelKey": self._parameters["category"]}
 
-        data = self._get_cached_response("{0}audio-video-channel.htm".format(self._cdaweb_url), parameters)
+        data = self.request("{0}audio-video-channel.htm".format(self._cdaweb_url), parameters)
 
         with Menu(["date", "alpha"]) as menu:
             for video in data["gallery"]["clips"]:
