@@ -1,3 +1,9 @@
+[B]Version 1.3.5 - 2017-09-29[/B]
+- Bumped dependency on xbmc.python to version 2.14.0.
+
+[B]Version 1.3.4 - 2017-09-28[/B]
+- Fixed bug causing responses to be cached forever. I'm stupid.
+
 [B]Version 1.3.3 - 2017-09-20[/B]
 - Add date sorting for NFLC teams.
 - Renamed San Diego Chargers to Los Angeles Chargers.
